新建kotlin学习组件并引入markdown渲染

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,6 @@ dependencies {
         implementation project(":model:model-splash")
         implementation project(":model:model-home")
         implementation project(":model:model-login")
+        implementation project(":model:model-mykotlin")
     }
 }
