替换网络请求库

--- a/app-model-build.gradle
+++ b/app-model-build.gradle
@@ -75,7 +75,7 @@ dependencies {
     //Jetpack
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'     //协程支持
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-alpha02'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
 
     //公共基础包
