--- a/model/model-home/src/main/AndroidManifest.xml
+++ b/model/model-home/src/main/AndroidManifest.xml
@@ -2,6 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.model.home">
 
+    <!-- 开启网络访问权限 -->
+    <uses-permission android:name="android.permission.INTERNET">
+    </uses-permission>
+    <!-- 允许访问网络状态的权限 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!-- 允许访问wifi状态的权限 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <!-- 允许修改网络状态的权限 -->
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE">
+    </uses-permission>
+    <!-- 允许修改wifi状态的权限 -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+
     <application>
         <activity android:name=".HomeMainActivity" />
     </application>
