--- a/model/model-mykotlin/build.gradle
+++ b/model/model-mykotlin/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation project(":library:lib-common")
 
     implementation 'io.noties.markwon:core:4.6.2'
+    //markdown
     implementation"io.noties.markwon:html:4.6.2"
     implementation 'com.github.kingideayou:MarkwonCodeEx:1.0.0'
 
