--- a/model/model-home/src/main/alone/AndroidManifest.xml
+++ b/model/model-home/src/main/alone/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/home_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BaseApplication">
+        android:theme="@style/HomeTheme.BaseApplication">
         <activity android:name=".HomeMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
