--- a/model/model-splash/src/main/AndroidManifest.xml
+++ b/model/model-splash/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.model.splash">
 
     <application>
-        <activity android:name=".SplashMainActivity" />
+        <activity android:name=".SplashMainActivity" android:theme="@style/SplashTheme.BaseApplication" />
     </application>
 
 </manifest>
