--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ android {
 }
 
 dependencies {
+    //主题包
+    implementation 'com.google.android.material:material:1.5.0'
     //公共基础包
     implementation project(":library:lib-common")
     implementation 'androidx.appcompat:appcompat:1.4.1'
