--- a/model/model-login/src/main/alone/AndroidManifest.xml
+++ b/model/model-login/src/main/alone/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/login_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BaseApplication">
+        android:theme="@style/login_Theme.BaseApplication">
         <activity android:name="com.model.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
