--- a/settings.gradle
+++ b/settings.gradle
@@ -17,12 +17,12 @@ rootProject.name = "My Application"
 //宿主App
 include ':app'
 //基础依赖库
-include ':library:lib-base' //--基础
-include ':library:lib-common' //--公共
-include ':library:lib-widget' //--widget（页面状态）
-include ':library:lib-router' //--路由
-include ':library:lib-logcat' //--日志
-include ':library:lib-network' //--日志
+include ':library:lib-base'         //--mvvm基本封装
+include ':library:lib-widget'       //--常用组件封装
+include ':library:lib-router'       //--路由
+include ':library:lib-logcat'       //--日志系统
+include ':library:lib-network'      //--网络请求的封装
+include ':library:lib-common'       //--网络公共配置的地方
 //业务模块
 include ':model:model-splash'//启动页
 include ':model:model-home'//首页
