启动页横竖屏切换禁止重启

--- a/model/model-splash/src/main/AndroidManifest.xml
+++ b/model/model-splash/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     package="com.model.splash">
 
     <application>
-        <activity android:name=".SplashMainActivity" android:theme="@style/SplashTheme.BaseApplication" />
+        <activity
+            android:name=".SplashMainActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/SplashTheme.BaseApplication" />
     </application>
 
 </manifest>
