--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,6 @@
     <application
         android:name=".MainApplication"
         android:allowBackup="false"
-        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -27,10 +26,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/APPTheme.BaseApplication"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <!--入口activity-->
         <activity
             android:name="com.model.splash.SplashMainActivity"
+            android:configChanges="orientation|screenSize"
             android:exported="true"
             android:theme="@style/SplashTheme.BaseApplication">
             <intent-filter>
