--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,23 @@ android {
 }
 
 dependencies {
+    implementation fileTree(include:['*.jar'], dir:'libs')
+    // 下面各SDK根据宿主App是否使用相关业务按需引入。
+    // 友盟统计SDK
+    implementation 'com.umeng.umsdk:common:9.4.7'// 必选
+    implementation 'com.umeng.umsdk:asms:1.4.0'// 必选
+    implementation 'com.umeng.umsdk:abtest:1.0.0'//使用U-App中ABTest能力，可选
+    //
+
+
+
+
     //主题包
     implementation 'com.google.android.material:material:1.5.0'
     //公共基础包
     implementation project(":library:lib-common")
+    implementation project(":library:lib-logcat")
+    //用于设置主题
     implementation 'androidx.appcompat:appcompat:1.4.1'
     if (!isRunModel.toBoolean()) {
         implementation project(":model:model-splash")
