--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <!-- 允许修改wifi状态的权限 -->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <!-- 获取用户设备的IMEI，通过IMEI对用户进行唯一标识，以便提供统计分析服务。 （友盟统计的）-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 
     <application
@@ -38,6 +40,19 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <!--友盟统计的集成测试配置-->
+            <!--1.唤起码默认为“um.该app对应的appkey”，不可改变-->
+            <!--2.请使用单独intent-filter,和其他intent-filter并列，不要将上述代码填入其他intent-filter里；-->
+            <!--3.该功能仅9.4.0及以上版本的SDK支持-->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="um.624aef686adb343c47f143a4" />
             </intent-filter>
         </activity>
 
