--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,7 @@ include ':app'
 include ':library:lib-base'         //--mvvm基本封装
 include ':library:lib-widget'       //--常用组件封装
 include ':library:lib-router'       //--路由
+include ':library:lib_file'         //--文件系统
 include ':library:lib-logcat'       //--日志系统
 include ':library:lib-network'      //--网络请求的封装
 include ':library:lib-common'       //--网络公共配置的地方
