--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     // 友盟统计SDK
     implementation 'com.umeng.umsdk:common:9.4.7'// 必选
     implementation 'com.umeng.umsdk:asms:1.4.0'// 必选
+    implementation 'com.umeng.umsdk:apm:1.5.2' // U-APM包依赖(必选)
     implementation 'com.umeng.umsdk:abtest:1.0.0'//使用U-App中ABTest能力，可选
     //
 
