--- a/model/model-home/build.gradle
+++ b/model/model-home/build.gradle
@@ -17,6 +17,9 @@ kapt {
 }
 
 dependencies {
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //公共基础包
     implementation project(":library:lib-common")
     implementation 'com.google.android.material:material:1.5.0'
