--- a/model/model-mykotlin/src/main/AndroidManifest.xml
+++ b/model/model-mykotlin/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.model.mykotlin">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application>
         <activity
             android:name=".activity.FileOperatorActivity"
