--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        //统一资源前缀，规范资源引用
+        resourcePrefix "app_"
     }
 
     buildTypes {
