--- a/settings.gradle
+++ b/settings.gradle
@@ -32,3 +32,4 @@ include ':model:model-splash'//启动页
 include ':model:model-home'//首页
 include ':model:model-login'//登录页
 include ':model:model-mykotlin'//kotlin示例
+include ':model:model-airpods'//airpods弹窗模块
