--- a/model/model-airpods/src/main/AndroidManifest.xml
+++ b/model/model-airpods/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
+
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -24,6 +26,7 @@
             android:name=".service.AnPodsService"
             android:enabled="true"
             android:exported="false" />
+        <!--开机广播-->
         <receiver
             android:name=".AutoStarter"
             android:enabled="true"
