--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     // 下面各SDK根据宿主App是否使用相关业务按需引入。
     // 友盟统计SDK
     implementation 'com.umeng.umsdk:common:9.4.7'// 必选
-    implementation 'com.umeng.umsdk:asms:1.4.0'// 必选
+    implementation 'com.umeng.umsdk:asms:1.4.1'// 必选
     implementation 'com.umeng.umsdk:apm:1.5.2' // U-APM包依赖(必选)
     implementation 'com.umeng.umsdk:abtest:1.0.0'//使用U-App中ABTest能力，可选
     //
@@ -60,5 +60,6 @@ dependencies {
         implementation project(":model:model-home")
         implementation project(":model:model-login")
         implementation project(":model:model-mykotlin")
+        implementation project(":model:model-airpods")
     }
 }
