--- a/model/model-airpods/build.gradle
+++ b/model/model-airpods/build.gradle
@@ -34,21 +34,24 @@ android {
     }
 }
 
+//ARouter 配置
+kapt {
+    arguments {
+        arg("AROUTER_MODULE_NAME", project.getName())
+    }
+}
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.lifecycle:lifecycle-service:2.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-
-    //kotlin Anko Commons
-    implementation 'org.jetbrains.anko:anko-commons:0.10.8'
-    implementation 'org.jetbrains.anko:anko-design:0.10.8'
 
     //公共基础包
     implementation project(":library:lib-common")
