增加banner并处理滑动冲突

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,8 @@ android {
     }
 
     productFlavors {
-        app_1 {
-            applicationId "com.wangkai.test1"
+        app {
+            applicationId "com.wangkai.myapplication"
             versionName "1.0"
             manifestPlaceholders = [app_name: "@string/app_name",]
         }
