--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,9 @@ dependencyResolutionManagement {
         mavenCentral()
         maven { url 'https://jitpack.io' }
         maven { url 'https://repo1.maven.org/maven2/' }
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 rootProject.name = "My Application"
