--- a/model/model-home/build.gradle
+++ b/model/model-home/build.gradle
@@ -1,4 +1,5 @@
 apply from: "../../app-model-build.gradle"
+apply plugin: 'org.jetbrains.kotlin.android'
 android {
     defaultConfig {
         if (isRunModel.toBoolean()) {
@@ -17,6 +18,8 @@ kapt {
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
