--- a/model/model-kotlin/build.gradle
+++ b/model/model-kotlin/build.gradle
@@ -11,24 +11,9 @@ android {
     resourcePrefix "mykotlin_"
 }
 
-//ARouter 配置
-kapt {
-    arguments {
-        arg("AROUTER_MODULE_NAME", project.getName())
-    }
-}
-
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation project(path: ':library:lib-launcher')
-
-    //公共基础包
-    implementation project(":library:lib-common")
-    implementation project(':library:lib-file')
+    implementation project(path: ':library:lib-file')
 
     implementation 'io.noties.markwon:core:4.6.2'
     //markdown
@@ -36,11 +21,4 @@ dependencies {
     implementation 'com.github.kingideayou:MarkwonCodeEx:1.0.0'
     //ARCore
     implementation 'com.google.ar:core:1.31.0'
-    //路由
-    implementation('com.alibaba:arouter-api:1.5.2') {
-        //过滤掉v4包里面的东西 防止和AndroidX冲突
-        exclude group: 'com.android.support', module: 'support-v4'
-    }
-    kapt 'com.alibaba:arouter-compiler:1.5.2'    //ARouter路由compiler
-
 }
