--- a/model/model-center/src/main/alone/AndroidManifest.xml
+++ b/model/model-center/src/main/alone/AndroidManifest.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.model.login">
-
+    package="com.model.center">
 
     <application
         android:name="com.library.base.application.DebugApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/login_app_name"
+        android:label="@string/center_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/login_Theme.BaseApplication">
-        <activity android:name=".LoginActivity"
+        android:theme="@style/CenterTheme.BaseApplication">
+        <activity android:name=".activity.CenterMainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
