新的app构建方式

--- a/settings.gradle
+++ b/settings.gradle
@@ -37,3 +37,5 @@ include ':model:model-login'//登录页
 include ':model:model-kotlin'//kotlin示例
 include ':model:model-airpods'//airpods弹窗模块
 include ':model:model-center'
+//依赖管理
+includeBuild("versionPlugin")
