--- a/model/model-airpods/src/main/alone/AndroidManifest.xml
+++ b/model/model-airpods/src/main/alone/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/airpods_ic_launcher"
         android:label="@string/airpods_app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/airpods_ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AirpodsTheme.MyApplication" />
 
