开机自启动

--- a/model/model-airpods/src/main/AndroidManifest.xml
+++ b/model/model-airpods/src/main/AndroidManifest.xml
@@ -8,8 +8,13 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+    <!--开机自启动权限-->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <!--安装未知来源应用-->
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+    <!--前台服务-->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
@@ -32,9 +37,12 @@
             android:name=".AutoStarter"
             android:enabled="true"
             android:exported="true"
-            android:label="@string/airpods_app_name">
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
     </application>
