--- a/model/model-airpods/build.gradle
+++ b/model/model-airpods/build.gradle
@@ -7,6 +7,10 @@ android {
             applicationId "com.model.airpods"
         }
     }
+
+    dexOptions {
+        preDexLibraries false
+    }
     //统一资源前缀，规范资源引用
     resourcePrefix "airpods_"
 }
