--- a/model/model-airpods/src/main/AndroidManifest.xml
+++ b/model/model-airpods/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/airpods_an_pods_widget_info" />
         </receiver>
+        <!--小磁贴-->
         <service
             android:name=".service.AnPodsTileService"
             android:exported="true"
