--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     // 下面各SDK根据宿主App是否使用相关业务按需引入。
     // 友盟统计SDK
-    implementation 'com.umeng.umsdk:common:9.5.0'// 必选
+    implementation 'com.umeng.umsdk:common:9.5.1'// 必选
     implementation 'com.umeng.umsdk:asms:1.6.3'// 必选
     implementation 'com.umeng.umsdk:apm:1.7.0' // U-APM包依赖(必选)
     implementation 'com.umeng.umsdk:abtest:1.0.1'//使用U-App中ABTest能力，可选
@@ -88,9 +88,9 @@ dependencies {
 
 
     // SDK（2.1.5及以上版本）已经将Java Crash和Native Crash捕获功能分开，如果想使用NDK库，需要配置： implementation 'com.tencent.bugly:nativecrashreport:latest.release'
-    implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'
+    implementation 'com.tencent.bugly:crashreport_upgrade:1.6.1'
     //其中latest.release指代最新版本号，也可以指定明确的版本号，例如1.2.0
-    implementation 'com.tencent.bugly:nativecrashreport:latest.release'
+    implementation 'com.tencent.bugly:nativecrashreport:3.9.2'
     //其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.2.0
 
     //用于设置主题
