--- a/app-model-build.gradle
+++ b/app-model-build.gradle
@@ -1,6 +1,7 @@
 apply plugin: getModelType()
 apply plugin: "kotlin-android"
 apply plugin: 'kotlin-kapt'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 String getModelType() {
     if (isRunModel.toBoolean()) {
@@ -11,13 +12,6 @@ String getModelType() {
 }
 
 android {
-    compileSdk 32
-    defaultConfig {
-        minSdk 21
-        targetSdk 32
-        versionCode 1
-        versionName "1.0"
-    }
     /*构建类型*/
     buildTypes {
         release {
@@ -65,29 +59,4 @@ kapt {
     arguments {
         arg("AROUTER_MODULE_NAME", project.getName())
     }
-}
-/*模块中需要引入的公共库*/
-dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    //KTX
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-service:2.4.1'
-    //基础组件库
-    implementation project(":library:lib-base")
-    //组件包
-    implementation project(":library:lib-widget")
-    //公共基础包
-    implementation project(":library:lib-common")
-    //路由
-    implementation('com.alibaba:arouter-api:1.5.2') {
-        //过滤掉v4包里面的东西 防止和AndroidX冲突
-        exclude group: 'com.android.support', module: 'support-v4'
-    }
-    kapt 'com.alibaba:arouter-compiler:1.5.2'    //ARouter路由compiler
 }
