--- a/model/model-kotlin/build.gradle
+++ b/model/model-kotlin/build.gradle
@@ -36,9 +36,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     //KTX
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-alpha05'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha05'
     implementation 'androidx.lifecycle:lifecycle-service:2.4.1'
     //基础组件库
     implementation project(":library:lib-base")
@@ -48,10 +48,4 @@ dependencies {
     implementation project(":library:lib-common")
     implementation project(path: ':library:lib-launcher')
     implementation project(path: ':library:lib-file')
-    //路由
-    implementation('com.alibaba:arouter-api:1.5.2') {
-        //过滤掉v4包里面的东西 防止和AndroidX冲突
-        exclude group: 'com.android.support', module: 'support-v4'
-    }
-    kapt 'com.alibaba:arouter-compiler:1.5.2'    //ARouter路由compiler
 }
