--- a/model/model-kotlin/build.gradle
+++ b/model/model-kotlin/build.gradle
@@ -30,8 +30,8 @@ dependencies {
     //ARCore
     implementation 'com.google.ar:core:1.31.0'
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation AndroidX.coreKtx
+    implementation AndroidX.appcompat
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
