--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+    viewBinding {
+        enabled = true
+    }
     /*kotlin选项*/
     kotlinOptions {
         jvmTarget = '1.8'
@@ -89,6 +92,8 @@ dependencies {
     //用于设置主题
     implementation AndroidX.appcompat
     implementation project(path: ':library:lib-file')
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     if (!isRunModel.toBoolean()) {
         implementation project(":model:model-splash")
         implementation project(":model:model-home")
