--- a/model/model-home/src/main/AndroidManifest.xml
+++ b/model/model-home/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity
             android:name=".HomeMainActivity"
             android:exported="false"
-            android:theme="@style/HomeTheme.BaseApplication" />
+            android:theme="@style/CommonTheme.TransparentBar" />
     </application>
 
 </manifest>
