--- a/model/model-home/src/main/alone/AndroidManifest.xml
+++ b/model/model-home/src/main/alone/AndroidManifest.xml
@@ -9,9 +9,11 @@
         android:label="@string/home_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/HomeTheme.BaseApplication">
-        <activity android:name=".HomeMainActivity"
-            android:exported="true">
+        android:theme="@style/CommonTheme.BaseApplication">
+        <activity
+            android:name=".HomeMainActivity"
+            android:exported="true"
+            android:theme="@style/CommonTheme.TransparentBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
