--- a/model/model-splash/src/main/AndroidManifest.xml
+++ b/model/model-splash/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         <activity
             android:name=".SplashMainActivity"
             android:configChanges="orientation|screenSize"
-            android:theme="@style/SplashTheme.BaseApplication" />
+            android:theme="@style/CommonTheme.BaseApplication" />
     </application>
 
 </manifest>
